# streamlit-annotation-care-quality

./: .gitignore  README.md  audio_annotation_interface.py  copy_files_from_expert_annotation_interface.sh  data_annotation_interface.py  data_utils.py  filter_conv.ipynb  interface.py  interface_control.py  interface_treatment.py  pyproject.toml
data/: state_control_eval.json  state_treatment_eval.json
