[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pandas = "^2.2.2"
requests = "^2.32.3"
typed-ast = "^1.5.5"
pingouin = "^0.5.4"
statsmodels = "^0.14.2"
simpledorff = "^0.0.2"
krippendorff = "*"
streamlit-survey = "^1.0.2"
google-cloud-storage = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
